add example of env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=your-google-client-id-here
 GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
-SESSION_SECRET=
+SESSION_SECRET=your-session-secret-here
