--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,15 +2,13 @@ name: Conductor CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ ci-cd ]
   pull_request:
-    branches: [ main ]
+    branches: [ ci-cd ]
 
 jobs:
-  # ========= CI: build & test =========
   ci:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -19,10 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: app/backend/package-lock.json
 
-      # ---- Backend: install + test ----
       - name: Install backend dependencies
         working-directory: app/backend
         run: npm ci
@@ -31,33 +26,25 @@ jobs:
         working-directory: app/backend
         run: npm test
 
-      # ---- Frontend: basic check ----
-      # (your frontend is static HTML/CSS/JS,
-      #  so we just sanity-check that key files exist)
       - name: Check frontend files exist
         run: |
           test -f app/frontend/public/index.html
           ls app/frontend/src/pages
 
-  # ========= CD: create deployment artifact =========
+  # optional deploy job, still only on ci-cd branch
   deploy:
     needs: ci
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/ci-cd'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Create a tarball containing the whole app folder.
-      # This simulates a "deployable build" of your app.
       - name: Create deployment archive
-        run: |
-          tar -czf conductor-app.tar.gz app
+        run: tar -czf conductor-app.tar.gz app
 
-      # Upload the artifact so it can be downloaded and used
-      # to deploy on a server or graded by your professor.
-      - name: Upload deployment artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: conductor-app-build
