--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       # ---- Backend: install + test ----
       - name: Install backend dependencies
         working-directory: app/backend
-        run: npm ci
+        run: npm install
 
       - name: Run backend tests
         working-directory: app/backend
