--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "node --test",
+    "lint": "eslint .",
     "start": "node server.js"
   },
   "keywords": [],
@@ -14,5 +15,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
