--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,13 +35,24 @@ jobs:
       - name: Run backend tests
         working-directory: app/backend
         run: npm test
+        
+      - name: Generate backend docs (JSDoc)
+        working-directory: app/backend
+        run: npm run docs
+
+      - name: Upload backend docs artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-jsdoc
+          path: app/backend/docs
+
 
       # ---- Frontend: basic check ----
       - name: Check frontend files exist
         run: |
           test -f app/frontend/public/index.html
           ls app/frontend/src/pages
-          
+
       - name: Install frontend dependencies
         working-directory: app/frontend
         run: npm install
