--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No frontend tests yet\"",
-    "lint": "eslint ."
+    "lint:js": "eslint .",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint:html": "htmlhint \"public/**/*.html\"",
+
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
+    "test": "echo \"No frontend tests yet\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +17,9 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "eslint": "^9.39.1",
-    "globals": "^16.5.0"
+    "globals": "^16.5.0",
+    "htmlhint": "^1.7.1",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1"
   }
 }
