Add Cypress integration and configure ESLint for frontend
add cypress for cicd

add exmaple cypress and config eslint from frontend

fix htmllint scan scope and fix html mistake and let eslint scope

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,6 +61,10 @@ jobs:
         working-directory: app/frontend
         run: npm run lint
 
+      - name: Run Cypress
+        working-directory: app/frontend
+        run: npm run cy:run
+
   # ========= CD: create deployment artifact =========
   deploy:
     needs: ci
