--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -3,26 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-"scripts": {
-  "lint:js": "eslint .",
-  "lint:css": "stylelint \"src/**/*.css\"",
-  "lint:html": "htmlhint \"public/**/*.html\"",
-
-  "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
-
-  "lint:js:fix": "eslint . --fix",
-  "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
-  "lint:html:fix": "htmlhint \"public/**/*.html\" --fix",
-
-  "lint:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run lint:html:fix",
-
-  "test": "echo \"No frontend tests yet\""
-},
+  "scripts": {
+    "lint:js": "eslint .",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint:html": "htmlhint \"src/**/*.html\"",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:html",
+    "lint:js:fix": "eslint . --fix",
+    "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "cypress": "^15.6.0",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "htmlhint": "^1.7.1",
