--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,13 @@ jobs:
         with:
           name: backend-jsdoc
           path: app/backend/docs
-
+          
+      - name: Run Codacy code quality (backend only)
+        uses: codacy/codacy-analysis-cli-action@v4
+        with:
+          api-token: ${{ secrets.CODACY_API_TOKEN }}
+          directory: ${{ github.workspace }}/app/backend
+          verbose: true
 
       # ---- Frontend: basic check ----
       - name: Check frontend files exist
