Use github API to retrieve issues from projects and then display them in the task tracker page

--- a/app/backend/data/github-config.json
+++ b/app/backend/data/github-config.json
@@ -1,5 +1,5 @@
 {
-  "owner": "HanisPHY",
-  "repo": "test-repo",
-  "token": ""
+  "owner": "CSE210-FA25-Team03",
+  "repo": "Conductor-App",
+  "projectId": "1"
 }
